--- a/Dockerfile.old
+++ b/Dockerfile.old
@@ -1,22 +1,18 @@
-#start builder container to prep java
-FROM mcr.microsoft.com/windows/servercore:1809 as builder
-
-#Download required files
-ADD http://javadl.oracle.com/webapps/download/AutoDL?BundleId=210185 C:/install/jre.exe
-
-#Install Java into builder so bin can be copied
-RUN powershell start-process -filepath C:\install\jre.exe -passthru -wait -argumentlist "/s,INSTALLDIR=c:\java,/L,install64.log"
-
-#start nano container
-FROM mcr.microsoft.com/windows/nanoserver:1809
-
-#Download required files
-COPY --from=builder c:/java c:/java
-ADD http://mirrors.jenkins.io/war-stable/latest/jenkins.war C:/jenkins/jenkins.war
+FROM mcr.microsoft.com/windows/servercore:ltsc2019
 
 #set envirnoment vars
 ENV JENKINS_HOME c:\jenkins_home
 ENV JAVA_HOME c:\java
+
+#Download required files
+ADD http://mirrors.jenkins.io/war-stable/latest/jenkins.war C:/jenkins/jenkins.war
+ADD http://javadl.oracle.com/webapps/download/AutoDL?BundleId=210185 C:/install/jre.exe
+
+#Install Java
+RUN powershell start-process -filepath C:\install\jre.exe -passthru -wait -argumentlist "/s,INSTALLDIR=c:\java,/L,install64.log"
+
+#cleanup
+RUN rmdir /s /q C:\install
 
 #bootstrap jenkins
 CMD c:\java\bin\java -jar c:\jenkins\jenkins.war
