--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,9 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-latest'
-
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- job: Windows
+  pool:
+    vmImage: 'windows-2019'
+  steps:
+  - script: docker build . -t dynamicd/jenksinci:v1
+    displayName: 'Run docker build'
