--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,13 +4,32 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+  - master
+
+variables: 
+  - name: dockerrepo
+    value: winjenkins
+  - name: dockername
+    value: dynamicd
 
 stages:
-- stage: Build
-  jobs:
-  - job: Docker_Build
-    pool:
-      vmImage: 'windows-2019'
-    steps:
-    - script: docker build . -t dynamicd/jenksinci:v1
+  - stage: buildAndPush
+    jobs:
+      - job: DockerBuild
+        pool:
+          vmImage: 'windows-2019'
+        steps:
+          - task: Docker@2
+            displayName: Login to Docker Hub
+            inputs:
+              command: login
+              containerRegistry: DockerHub
+              repository: $(dynamicd)/$(dockerrepo)
+          - task: Docker@2
+            displayName: Build and Push
+            inputs:
+              command: buildAndPush
+              repository: $(dynamicd)/$(dockerrepo)
+              tags: |
+                $(dockerrepo)
+                $(dockername)/$(dockerrepo)
