playing with tags

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,5 @@ stages:
             inputs:
               command: buildAndPush
               repository: $(dynamicd)/$(dockerrepo)
-              tags: |
-                $(dockerrepo)
-                $(dockername)/$(dockerrepo)
+              tags: $(dockername)/$(dockerrepo)
+              
