--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,8 +25,10 @@ stages:
               command: login
               containerRegistry: DockerHub
               repository: $(dynamicd)/$(dockerrepo)
+          - script: docker build -t $(dynamicd)/$(dockerrepo) .
           - task: Docker@2
-            displayName: Build and Push
+            displayName: Push
             inputs:
-              command: buildAndPush
+              command: push
               repository: $(dynamicd)/$(dockerrepo)
+              tags: $(dynamicd)/$(dockerrepo)
