--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,11 +24,12 @@ stages:
             inputs:
               command: login
               containerRegistry: DockerHub
-              repository: $(dynamicd)/$(dockerrepo)
-          - script: docker build -t $(dynamicd)/$(dockerrepo) .
+              repository: $(dockername)/$(dockerrepo)
           - task: Docker@2
-            displayName: Push
+            displayName: Build and Push
             inputs:
-              command: push
-              repository: $(dynamicd)/$(dockerrepo)
-              tags: $(dynamicd)/$(dockerrepo)
+              command: buildAndPush
+              repository: $(dockername)/$(dockerrepo)
+              tags: |
+                $(dockerrepo)
+                $(dockername)/$(dockerrepo)
