--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,10 +7,8 @@ trigger:
   - master
 
 variables: 
-  - name: dockerrepo
-    value: winjenkins
-  - name: dockername
-    value: dynamicd
+  dockerrepo: winjenkins
+  dockername: dynamicd
 
 stages:
   - stage: buildAndPush
