--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,4 +31,4 @@ stages:
             inputs:
               command: buildAndPush
               repository: $(dockerrepo)
-              tags: dynamicd/winjenkins:$(majorMinorVersion).$(semanticVersion)
+              tags: winjenkins:$(majorMinorVersion).$(semanticVersion)
