--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,9 +25,9 @@ stages:
             inputs:
               command: login
               containerRegistry: DockerHub
-              repository: $(dockerrepo)
           - task: Docker@2
             displayName: Build and Push
             inputs:
               command: buildAndPush
-              tags: winjenkins:$(majorMinorVersion).$(semanticVersion)
+              repository: $(dockerrepo)
+              tags: $(majorMinorVersion).$(semanticVersion)
