--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,13 +4,30 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+  - master
 
+variables: 
+  dockerrepo: dynamicd/winjenkins
+  majorMinorVersion: 1.0
+  # semanticVersion counter is automatically incremented by one in each execution of pipeline
+  # second parameter is seed value to reset to every time the referenced majorMinorVersion is changed
+  semanticVersion: $[counter(variables['majorMinorVersion'], 0)]
+  
 stages:
-- stage: Build
-  jobs:
-  - job: Docker_Build
-    pool:
-      vmImage: 'windows-2019'
-    steps:
-    - script: docker build . -t dynamicd/jenksinci:v1
+  - stage: buildAndPush
+    jobs:
+      - job: DockerBuild
+        pool:
+          vmImage: 'windows-2019'
+        steps:
+          - task: Docker@2
+            displayName: Login to Docker Hub
+            inputs:
+              command: login
+              containerRegistry: DockerHub
+          - task: Docker@2
+            displayName: Build and Push
+            inputs:
+              command: buildAndPush
+              repository: $(dockerrepo)
+              tags: $(majorMinorVersion).$(semanticVersion)
