--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,13 +30,7 @@ stages:
             inputs:
               command: buildAndPush
               repository: $(dockerrepo)
-              tags: $(majorMinorVersion).$(semanticVersion)
-  - stage: Release_Update
-    jobs:
-      - job: ReleaseUpdate
-        pool:
-          vmImage: 'windows-2019'
-        steps:
+              tags: v$(majorMinorVersion).$(semanticVersion)
           - task: GitHubRelease@0
             displayName: update release info on GitHub
             inputs:
@@ -44,4 +38,4 @@ stages:
               repositoryName: $(dockerrepo)
               action: create
               tagSource: manual
-              tag: $(majorMinorVersion).$(semanticVersion)
+              tag: v$(majorMinorVersion).$(semanticVersion)
