--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ variables:
   # semanticVersion counter is automatically incremented by one in each execution of pipeline
   # second parameter is seed value to reset to every time the referenced majorMinorVersion is changed
   semanticVersion: $[counter(variables['majorMinorVersion'], 0)]
-  
+
 stages:
   - stage: buildAndPush
     jobs:
@@ -22,17 +22,27 @@ stages:
         steps:
           - task: Docker@2
             displayName: Login to Docker Hub
+            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
             inputs:
               command: login
               containerRegistry: DockerHub
           - task: Docker@2
-            displayName: Build and Push
+            displayName: Build
+            condition: succeeded()
             inputs:
-              command: buildAndPush
+              command: build
+              repository: $(dockerrepo)
+              tags: v$(majorMinorVersion).$(semanticVersion)
+          - task: Docker@2
+            displayName: Push
+            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+            inputs:
+              command: push
               repository: $(dockerrepo)
               tags: v$(majorMinorVersion).$(semanticVersion)
           - task: GitHubRelease@0
             displayName: update release info on GitHub
+            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
             inputs:
               gitHubConnection: GitHub-PAT
               repositoryName: $(dockerrepo)
