Update azure-pipelines.yml for Azure Pipelines
test new flags

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,5 +47,7 @@ stages:
               gitHubConnection: GitHub-PAT
               repositoryName: $(dockerrepo)
               action: create
+              target: $(Build.SourceVersion)
               tagSource: manual
               tag: v$(majorMinorVersion).$(semanticVersion)
+              Assets:
