--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,10 +26,9 @@ stages:
               type: inline
               script: |
                 $results = (invoke-webrequest https://mcr.microsoft.com/v2/windows/nanoserver/tags/list).Content | ConvertFrom-Json
-                $nanoversion = ($results.tags | where { $_.length -eq 4 } | Sort-object -Descending)[0]
-                write-output "ServerNano: $nanoversion"
-                Write-Output ("##vso[task.setvariable variable=nanoversion;]$nanoversion")
-        
+                $versionnano = ($results.tags | where { $_.length -eq 4 } | Sort-object -Descending)[0]
+                Write-Output "ServerNano: $versionnano"
+                Write-Output ("##vso[task.setvariable variable=versionNano;]$versionnano")
   - stage: buildAndPush
     jobs:
       - job: DockerBuild
@@ -47,6 +46,7 @@ stages:
             condition: succeeded()
             inputs:
               command: build
+              arguments: --build-arg VERSIONNANO=$(versionNano)
               repository: $(dockerrepo)
               tags: v$(majorMinorVersion).$(semanticVersion)
           - task: Docker@2
