change image tagging

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,4 +55,6 @@ stages:
             inputs:
               command: push
               repository: $(dockerrepo)
-              tags: v$(majorMinorVersion).$(semanticVersion)
+              tags: |
+                latest
+                $(versionNano)
