--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,12 +23,7 @@ stages:
           - task: PowerShell@2
             displayName: Get Latest Version of NanoServer
             inputs:
-              type: inline
-              script: |
-                $results = (invoke-webrequest https://mcr.microsoft.com/v2/windows/nanoserver/tags/list).Content | ConvertFrom-Json
-                $versionnano = ($results.tags | where { $_.length -eq 4 } | Sort-object -Descending)[0]
-                Write-Output "ServerNano: $versionnano"
-                Write-Output ("##vso[task.setvariable variable=versionNano;]$versionnano")
+              script: .\scripts\getnanoversion.ps1
   - stage: buildAndPush
     jobs:
       - job: DockerBuild
