--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,14 +36,10 @@ stages:
             inputs:
               command: build
               arguments: --build-arg VERSIONNANO=$(versionNano)
-              repository: $(dockerrepo)
-              tags: v$(majorMinorVersion).$(semanticVersion)
           - task: Docker@2
             displayName: Push
             condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
             inputs:
               command: push
               repository: $(dockerrepo)
-              tags: |
-                latest
-                $(versionNano)
+              tags: $(versionNano)
