--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,8 @@ stages:
     jobs:
       - job: DockerBuild
         pool:
-          vmImage: 'windows-2019'
+          #vmImage: 'windows-2019'
+          vmImage: 'win1803'
         steps:
           - task: Docker@2
             displayName: Login to Docker Hub
@@ -35,7 +36,7 @@ stages:
             condition: succeeded()
             inputs:
               command: build
-              # arguments: --build-arg VERSIONNANO=$(versionNano)
+              arguments: --build-arg VERSIONNANO=$(versionNano)
           - task: Docker@2
             displayName: Push
             condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
