--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,7 @@ stages:
     jobs:
       - job: DockerBuild
         pool:
-          #vmImage: 'windows-2019'
-          vmImage: 'win1803'
+          vmImage: 'windows-2019'
         steps:
           - task: Docker@2
             displayName: Login to Docker Hub
@@ -37,10 +36,16 @@ stages:
             inputs:
               command: build
               arguments: --build-arg VERSIONNANO=$(versionNano)
+              repository: $(dockerrepo)
+              tags: |
+                latest
+                $(versionNano)
           - task: Docker@2
             displayName: Push
             condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
             inputs:
               command: push
               repository: $(dockerrepo)
-              tags: $(versionNano)
+              tags: |
+                latest
+                $(versionNano)
