--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -9,6 +9,7 @@ trigger:
 variables: 
   dockerrepo: dynamicd/winjenkins
   majorMinorVersion: 1.0
+  versionNano: "1809"
   # semanticVersion counter is automatically incremented by one in each execution of pipeline
   # second parameter is seed value to reset to every time the referenced majorMinorVersion is changed
   semanticVersion: $[counter(variables['majorMinorVersion'], 0)]
@@ -26,17 +27,26 @@ stages:
             inputs:
               command: login
               containerRegistry: DockerHub
+          - task: PowerShell@2
+            displayName: Check for a new build of Jenkins
+            inputs:
+              filepath: .\pipeline\checkNewBuilds.ps1
           - task: Docker@2
             displayName: Build
-            condition: succeeded()
+            condition: not(and(eq(variables['newBuild'], 'False'), eq(variables['Build.Reason'], 'Schedule')))
             inputs:
               command: build
+              arguments: --build-arg VERSIONNANO=$(versionNano) --build-arg VERSIONJENKINS=$(versionJenkins)
               repository: $(dockerrepo)
-              tags: v$(majorMinorVersion).$(semanticVersion)
+              tags: |
+                latest
+                $(versionJenkins)
           - task: Docker@2
             displayName: Push
-            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'), ne(and(eq(variables['newBuild'], 'False'), eq(variables['Build.Reason'], 'Schedule')))
             inputs:
               command: push
               repository: $(dockerrepo)
-              tags: v$(majorMinorVersion).$(semanticVersion)
+              tags: |
+                latest
+                $(versionJenkins)
