--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -43,7 +43,7 @@ stages:
                 $(versionJenkins)
           - task: Docker@2
             displayName: Push
-            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'), ne(and(eq(variables['newBuild'], 'False'), eq(variables['Build.Reason'], 'Schedule')))
+            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'), ne(and(eq(variables['newBuild'], 'False'), eq(variables['Build.Reason'], 'Schedule'))
             inputs:
               command: push
               repository: $(dockerrepo)
