--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -21,12 +21,6 @@ stages:
         pool:
           vmImage: 'windows-2019'
         steps:
-          - task: Docker@2
-            displayName: Login to Docker Hub
-            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
-            inputs:
-              command: login
-              containerRegistry: DockerHub
           - task: PowerShell@2
             displayName: Check for a new build of Jenkins
             inputs:
@@ -41,9 +35,19 @@ stages:
               tags: |
                 latest
                 $(versionJenkins)
+      - job: PushArtifact
+        dependsOn: DockerBuild
+        condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+        pool:
+          vmImage: 'windows-2019'
+        steps:
           - task: Docker@2
-            displayName: Push
-            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'), ne(and(eq(variables['newBuild'], 'False'), eq(variables['Build.Reason'], 'Schedule')))
+            displayName: Login to Docker Hub
+            inputs:
+              command: login
+              containerRegistry: DockerHub
+          - task: Docker@2
+            displayName: PushArtifact
             inputs:
               command: push
               repository: $(dockerrepo)
