--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -32,9 +32,7 @@ stages:
               command: build
               arguments: --build-arg VERSIONNANO=$(versionNano) --build-arg VERSIONJENKINS=latest
               repository: $(dockerrepo)
-              tags: |
-                latest
-                $(versionJenkins)
+              tags: v$(versionJenkins)
       - job: PushArtifact
         dependsOn: DockerBuild
         condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
@@ -51,6 +49,4 @@ stages:
             inputs:
               command: push
               repository: $(dockerrepo)
-              tags: |
-                latest
-                $(versionJenkins)
+              tags: v$(versionJenkins)
