--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -26,27 +26,27 @@ stages:
             inputs:
               filepath: .\pipeline\checkNewBuilds.ps1
           - task: Docker@2
-            displayName: Build
+            displayName: Build Container
             condition: not(and(eq(variables['newBuild'], 'False'), eq(variables['Build.Reason'], 'Schedule')))
             inputs:
               command: build
               arguments: --build-arg VERSIONNANO=$(versionNano) --build-arg VERSIONJENKINS=$(versionJenkins)
               repository: $(dockerrepo)
-              tags: v$(versionJenkins)
-      - job: PushArtifact
-        dependsOn: DockerBuild
-        condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
-        pool:
-          vmImage: 'windows-2019'
-        steps:
+              tags: |
+                latest
+                v$(versionJenkins)
           - task: Docker@2
             displayName: Login to Docker Hub
+            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
             inputs:
               command: login
               containerRegistry: DockerHub
           - task: Docker@2
-            displayName: PushArtifact
+            displayName: Push Artifact
+            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'), not(and(eq(variables['newBuild'], 'False'), eq(variables['Build.Reason'], 'Schedule'))))
             inputs:
               command: push
               repository: $(dockerrepo)
-              tags: v$(versionJenkins)
+              tags: |
+                latest
+                v$(versionJenkins)
