--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -8,11 +8,11 @@ trigger:
 
 variables: 
   dockerrepo: dynamicd/winjenkins
-  majorMinorVersion: 1.0
+  # majorMinorVersion: 1.0
   versionNano: "1809"
   # semanticVersion counter is automatically incremented by one in each execution of pipeline
   # second parameter is seed value to reset to every time the referenced majorMinorVersion is changed
-  semanticVersion: $[counter(variables['majorMinorVersion'], 0)]
+  # semanticVersion: $[counter(variables['majorMinorVersion'], 0)]
 
 stages:
   - stage: buildAndPush
@@ -32,9 +32,7 @@ stages:
               command: build
               arguments: --build-arg VERSIONNANO=$(versionNano) --build-arg VERSIONJENKINS=$(versionJenkins)
               repository: $(dockerrepo)
-              tags: |
-                latest
-                v$(versionJenkins)
+              tags: v$(versionJenkins)
           - task: Docker@2
             displayName: Login to Docker Hub
             condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
@@ -47,6 +45,4 @@ stages:
             inputs:
               command: push
               repository: $(dockerrepo)
-              tags: |
-                latest
-                v$(versionJenkins)
+              tags: v$(versionJenkins)
