--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -8,11 +8,11 @@ trigger:
 
 variables: 
   dockerrepo: dynamicd/winjenkins
-  # majorMinorVersion: 1.0
+  majorMinorVersion: 1.0
   versionNano: "1809"
   # semanticVersion counter is automatically incremented by one in each execution of pipeline
   # second parameter is seed value to reset to every time the referenced majorMinorVersion is changed
-  # semanticVersion: $[counter(variables['majorMinorVersion'], 0)]
+  semanticVersion: $[counter(variables['majorMinorVersion'], 0)]
 
 stages:
   - stage: buildAndPush
@@ -24,7 +24,7 @@ stages:
           - task: PowerShell@2
             displayName: Check for a new build of Jenkins
             inputs:
-              filepath: .\pipeline\checkNewBuilds.ps1
+              filepath: .\pipeline\checkNewBuilds.ps1 -minorVer $(semanticVersion)
           - task: Docker@2
             displayName: Login to DockerHub
             condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
