--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -24,7 +24,8 @@ stages:
           - task: PowerShell@2
             displayName: Check for a new build of Jenkins
             inputs:
-              filepath: .\pipeline\checkNewBuilds.ps1 -minorVer $(semanticVersion)
+              filepath: .\pipeline\checkNewBuilds.ps1
+              arguments: -minorVer $(semanticVersion)
           - task: Docker@2
             displayName: Login to DockerHub
             condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
@@ -33,7 +34,7 @@ stages:
               containerRegistry: DockerHub
           - task: Docker@2
             displayName: Build Container
-            condition: not(and(eq(variables['newBuild'], 'False'), eq(variables['Build.Reason'], 'Schedule')))
+            condition: and(succeeded(), not(and(eq(variables['newBuild'], 'False'), eq(variables['Build.Reason'], 'Schedule'))))
             inputs:
               command: build
               arguments: --build-arg VERSIONNANO=$(versionNano) --build-arg VERSIONJENKINS=$(versionJenkins)
