--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -6,6 +6,14 @@
 trigger:
   - master
 
+schedules:
+  - cron: "0 0 * * *"
+    displayName: Daily Midnight Check
+    branches:
+      include:
+      - master
+    always: true
+
 variables: 
   dockerrepo: dynamicd/winjenkins
   majorMinorVersion: 1.0
