--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -7,12 +7,12 @@ trigger:
   - master
 
 schedules:
-  - cron: "0 0 * * *"
+  - cron: '0 0 * * *'
     displayName: Daily Check
     branches:
       include:
         - master
-    always: true
+    always: 'true'
 
 variables: 
   dockerrepo: dynamicd/winjenkins
