--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
   - master
 
 schedules:
-  - cron: '0 0 * * *'
+  - cron: '0 0 22 * * *'
     displayName: Daily Check
     branches:
       include:
