change to daily at 1:00pm

--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
   - master
 
 schedules:
-  - cron: '* * * * *'
+  - cron: '0 20 * * *'
     displayName: Daily Check
     branches:
       include:
