--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
   - master
 
@@ -15,57 +10,33 @@ schedules:
     always: 'true'
 
 variables: 
-  dockerrepo: dynamicd/winjenkins
   majorMinorVersion: 1.0
-  versionNano: "1809"
-  # semanticVersion counter is automatically incremented by one in each execution of pipeline
-  # second parameter is seed value to reset to every time the referenced majorMinorVersion is changed
   semanticVersion: $[counter(variables['majorMinorVersion'], 0)]
 
-stages:
-  - stage: buildAndPush
-    jobs:
-      - job: DockerBuild
-        pool:
-          vmImage: 'windows-2019'
-        steps:
-          - task: PowerShell@2
-            displayName: Check for a new build of Jenkins
-            inputs:
-              filepath: .\pipeline\checkNewBuilds.ps1
-              arguments: -minorVer $(semanticVersion)
-          - task: Docker@2
-            displayName: Login to DockerHub
-            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
-            inputs:
-              command: login
-              containerRegistry: DockerHub
-          - task: Docker@2
-            displayName: Build Container
-            condition: and(succeeded(), or(eq(variables['newBuild'], 'True'), eq(variables['Build.Reason'], 'PullRequest')))
-            inputs:
-              command: build
-              arguments: --build-arg VERSIONNANO=$(versionNano) --build-arg VERSIONJENKINS=$(versionJenkins)
-              repository: $(dockerrepo)
-              tags: v$(versionJenkins)
-          - task: Docker@2
-            displayName: Push Artifact
-            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'), eq(variables['newBuild'], 'True'))
-            inputs:
-              command: push
-              repository: $(dockerrepo)
-              tags: v$(versionJenkins)
-          - task: GitHubRelease@0
-            displayName: Tag release info in GitHub
-            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'), eq(variables['newBuild'], 'True'))
-            inputs:
-              gitHubConnection: GitHub
-              repositoryName: '$(Build.Repository.Name)'
-              action: 'create'
-              target: '$(Build.SourceVersion)'
-              tagSource: 'auto'
-              title: 'v$(versionJenkins)'
-              releaseNotesSource: 'input'
-              releaseNotes: 'Jenkins Version: $(versionJenkins)
-                Nano Version: $(versionNano)'
-              addChangeLog: false
+resources:
+  repositories:
+    - repository: templates
+      type: github
+      name: Justin-DynamicD/azure_pipeline-templates
+      endpoint: GitHub
+
+jobs:
+  - job: getJenkinsVer
+    pool:
+      vmImage: 'windows-2019'
+    steps:
+      - task: PowerShell@2
+        name: checkJenkins
+        displayName: Check for a new build of Jenkins
+        inputs:
+          filepath: pipeline\checkNewBuilds.ps1
+          arguments: -minorVer $(semanticVersion)
+
+  - template: docker_container.yml@templates
+    dependsOn: getJenkinsVer
+    parameters:
+      Build_Arguments: --build-arg VERSIONJENKINS=$[ dependencies.getJenkinsVer.outputs['checkJenkins.versionJenkins'] ]
+      Container_Name: winjenkins
+      Container_Version: $[ dependencies.getJenkinsVer.outputs['checkJenkins.versionJenkins'] ]
+      NewBuild: $[ dependencies.getJenkinsVer.outputs['checkJenkins.newBuild'] ]
+      Pool: 'windows-2019'
