--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -38,11 +38,9 @@ jobs:
         inputs:
           targetType: inline
           script: |
-            $myargs = "--build-arg VERSIONNANO=$(versionNano) --build-arg VERSIONJENKINS=$env:JENKINSVER"
+            $myargs = "--build-arg VERSIONNANO=$(versionNano) --build-arg VERSIONJENKINS=$(versionJenkins)"
             write-output $myargs
             write-output "##vso[task.setvariable variable=buildArgument;isOutput=true]$myargs"
-        env:
-          JENKINSVER: $[ dependencies.getJenkinsVer.outputs['checkJenkins.versionJenkins'] ]
 
   - template: docker_container.yml@templates
     parameters:
