--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -44,7 +44,7 @@ jobs:
 
   - template: docker_container.yml@templates
     parameters:
-      Build_Arguments: $[ dependencies.getJenkinsVer.outputs['generateBA.buildArgument'] ]
+      Build_Arguments: $[ dependencies.getJenkinsVer.outputs['checkJenkins.buildArgument'] ]
       Container_Name: winjenkins
       Container_Version: $[ dependencies.getJenkinsVer.outputs['checkJenkins.versionJenkins'] ]
       dependsOn: getJenkinsVer
