--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -32,6 +32,7 @@ jobs:
         inputs:
           filepath: pipeline\checkNewBuilds.ps1
           arguments: -minorVer $(semanticVersion)
+
       - task: PowerShell@2
         name: generateBA
         displayName: Generate Build_Arguments
@@ -40,11 +41,11 @@ jobs:
           script: |
             $myargs = "--build-arg VERSIONNANO=$(versionNano) --build-arg VERSIONJENKINS=$(versionJenkins)"
             write-output $myargs
-            write-output "##vso[task.setvariable variable=buildArgument;isOutput=true]$myargs"
+            write-output "##vso[task.setvariable variable=buildArguments;isOutput=true]$myargs"
 
   - template: docker_container.yml@templates
-    parameters:
-      Build_Arguments: $[ dependencies.getJenkinsVer.outputs['checkJenkins.buildArgument'] ]
+    parameters: 
+      Build_Arguments: $[ dependencies.getJenkinsVer.outputs['generateBA.buildArguments'] ]
       Container_Name: winjenkins
       Container_Version: $[ dependencies.getJenkinsVer.outputs['checkJenkins.versionJenkins'] ]
       dependsOn: getJenkinsVer
